<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#FF000000"
        android:textColor="#FFFFFFFF"
        android:text="@string/qris_title_window"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_qris_close"
        app:layout_constraintTop_toTopOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_title"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        android:layout_marginEnd="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_transaction_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent">

      <TextView
          android:id="@+id/tv_merchant_name_label"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/qris_text_name_of_merchant"
          android:layout_marginTop="10dp"
          android:layout_marginHorizontal="10dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>

      <TextView
          android:id="@+id/tv_merchant_name_value"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:layout_marginTop="4dp"
          android:layout_marginHorizontal="10dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_merchant_name_label"
          app:layout_constraintEnd_toEndOf="parent"
          tools:text="nama merchant"/>

      <TextView
          android:id="@+id/tv_nominal_label"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/qris_text_transaction_nominal"
          android:layout_marginTop="10dp"
          android:layout_marginHorizontal="10dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_merchant_name_value"
          app:layout_constraintEnd_toEndOf="parent"/>

      <TextView
          android:id="@+id/tv_nominal_value"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:layout_marginTop="4dp"
          android:layout_marginHorizontal="10dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_nominal_label"
          app:layout_constraintEnd_toEndOf="parent"
          tools:text="1.000.000"/>

      <TextView
          android:id="@+id/tv_id_transaksi_label"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/qris_text_transaction_id"
          android:layout_marginTop="10dp"
          android:layout_marginHorizontal="10dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_nominal_value"
          app:layout_constraintEnd_toEndOf="parent"/>

      <TextView
          android:id="@+id/tv_id_transaksi_value"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:layout_marginTop="4dp"
          android:layout_marginHorizontal="10dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_id_transaksi_label"
          app:layout_constraintEnd_toEndOf="parent"
          tools:text="123456"/>

      <TextView
          android:id="@+id/tv_message_form"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:layout_marginHorizontal="10dp"
          android:gravity="center"
          android:text="@string/qris_text_not_enough_balance"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="#FFFF0000"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_id_transaksi_value"
          app:layout_constraintEnd_toEndOf="parent" />

      <TextView
          android:id="@+id/tv_balance_form"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:layout_marginHorizontal="10dp"
          android:gravity="center"
          android:text="@string/qris_text_your_balance"
          android:textSize="16sp"
          android:textStyle="bold"
          android:textColor="#FFFF0000"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_message_form"
          app:layout_constraintEnd_toEndOf="parent" />

      <Button
          android:id="@+id/btn_pay"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/qris_text_pay"
          android:textAllCaps="false"
          android:layout_marginTop="40dp"
          android:layout_marginHorizontal="10dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_balance_form"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_transaction_success"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@+id/cl_transaction_form"
        app:layout_constraintTop_toTopOf="@+id/cl_transaction_form"
        app:layout_constraintEnd_toEndOf="@+id/cl_transaction_form"
        app:layout_constraintBottom_toBottomOf="@+id/cl_transaction_form"
        android:visibility="gone"
        tools:visibility="visible">

      <TextView
          android:id="@+id/tv_message_success"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginHorizontal="10dp"
          android:gravity="bottom|center"
          android:text="@string/qris_text_transaction_success"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@android:color/holo_green_dark"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/tv_balance_sucess"
          app:layout_constraintVertical_chainStyle="spread_inside" />

      <TextView
          android:id="@+id/tv_balance_sucess"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginTop="10dp"
          android:layout_marginHorizontal="10dp"
          android:gravity="top|center"
          android:text="@string/qris_text_ending_balance"
          android:textSize="20sp"
          android:textStyle="bold"
          android:textColor="@android:color/holo_green_dark"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_message_success"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/btn_done" />

      <Button
          android:id="@+id/btn_done"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:text="@string/qris_text_done"
          android:textAllCaps="false"
          android:layout_marginTop="40dp"
          android:layout_marginHorizontal="10dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/tv_balance_sucess"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
